--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 @using Uniti_Full_Stack_Development_Coding_Challenge
 @namespace Uniti_Full_Stack_Development_Coding_Challenge.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using React.AspNet
+
+<script src="~/Content/Sample.jsx"></script>
+@Html.ReactInitJavaScript();
