--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Customers</h1>
+<%= react_component("ResourceFilterDisplay", props: @resource_props, prerender: false) %>
 
 <table>
   <thead>
