--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the Login controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.login__container{
+  width: 95%;
+  max-width: 500px;
+}
+
+.login__container .form__entry {
+  display: flex;
+  flex-direction: column;
+}
+
+.button-login {
+  width: fit-content;
+  margin-top: 0.75em;
+  padding: 0.5em 1.5em;
+
+  color: white;
+  background: #4F88DD;
+  border: 2px solid white;
+  font-size: 1.15rem;
+}
+
+.button-login:hover {
+  color: #4F88DD;
+  background: white;
+  border: 2px solid #4F88DD;
+}
