--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,5 +1,5 @@
 <section>
-  <div>
+  <div class="login__container my__container">
     <h1>User Login</h1>
     <% if session[:error] %>
       <%= react_component("Alert", props: {message: session[:error], variant: "danger"}, prerender: false) %>
@@ -8,17 +8,17 @@
     <%= form_for(:auth, url: root_path, :html => {class: "login-form"}, local: true) do |form| %>
 
       <div class="form__entry">
-        <%= form.label :username, :class => "form__entry" %>
+        <%= form.label :username, :class => "form__label" %>
         <%= form.text_field :username, :class => "form__input" %>
       </div>
 
       <div class="form__entry">
-        <%= form.label :password, "Password", :class => "form__entry" %>
+        <%= form.label :password, "Password", :class => "form__label" %>
         <%= form.password_field :password, :class => "form__input" %>
       </div>
 
       <div class="form__entry center">
-        <%= form.submit "Log in", class: "button button-add" %>
+        <%= form.submit "Log in", class: "button button-login" %>
       </div>
 
     <% end %>
